# Huffman

./: CMakeLists.txt  README.md
include/: Archiver.h  CLI.h  Huffman.h
src/: Archiver.cpp  CLI.cpp  Huffman.cpp  main-6.cpp
test/: Functions.h  TestFunctions.h  TestMain.cpp  doctest.h
